force-app/main/default/objects/User/fields/Assign_Order_Above__c.field-meta.xml
<CustomField>
    <fullName>Assign_Order_Above__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Assign Order Above</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>